unpackaged/main/default/objects/Account/fields/Welcome_to_Support_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_to_Support_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome to Support Sent</label>
    <type>Checkbox</type>
</CustomField>