unpackaged/main/default/objects/Account/fields/X6sense_Account_6QA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_6QA_Start_Date__c</fullName>
    <label>6sense Account 6QA Start Date</label>
    <type>Date</type>
</CustomField>