unpackaged/main/default/objects/Account/fields/X6sense_Account_Profile_Fit__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_Profile_Fit__c</fullName>
    <label>6sense Account Profile Fit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>