unpackaged/main/default/objects/Account/fields/X6sense_Account_Reach_Score__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_Reach_Score__c</fullName>
    <label>6sense Account Reach Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>