unpackaged/main/default/objects/Account/fields/X6Sense_Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>X6Sense_Segment_Name__c</fullName>
    <label>6Sense Segment Name</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>