unpackaged/main/default/objects/Account/fields/Zoominfo_Description__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_Description__c</fullName>
    <description>Zoominfo: Description of the Company</description>
    <label>Zoominfo Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>