unpackaged/main/default/objects/Account/fields/ZoomInfo_Industry__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Industry__c</fullName>
    <label>ZoomInfo Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>