unpackaged/main/default/objects/Account/fields/Zoominfo_Phone__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_Phone__c</fullName>
    <description>Zoominfo: Company phone number</description>
    <label>Zoominfo Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>