unpackaged/main/default/objects/Account/fields/Zoominfo_Record_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_Record_Purchase_Date__c</fullName>
    <description>Zoominfo: date the record was first enriched by zoominfo.</description>
    <inlineHelpText>Zoominfo: date the record was first enriched by zoominfo.</inlineHelpText>
    <label>Zoominfo Record Purchase Date</label>
    <type>DateTime</type>
</CustomField>