unpackaged/main/default/objects/Account/fields/ZoomInfo_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Revenue__c</fullName>
    <label>ZoomInfo Revenue</label>
    <length>25</length>
    <type>Text</type>
</CustomField>