unpackaged/main/default/objects/Account/fields/Zoominfo_State__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_State__c</fullName>
    <description>Field mapped in Zoominfo</description>
    <inlineHelpText>Field enriched by Zoominfo</inlineHelpText>
    <label>Zoominfo State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>