unpackaged/main/default/objects/Account/fields/ZoomInfo_SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_SubIndustry__c</fullName>
    <label>ZoomInfo SubIndustry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>