unpackaged/main/default/objects/Account/fields/Zoominfo_Website__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_Website__c</fullName>
    <description>Zoominfo: website of the Company</description>
    <label>Zoominfo Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>