unpackaged/main/default/objects/Account/fields/Zoominfo_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_Zip_Code__c</fullName>
    <description>Field mapped in Zoominfo</description>
    <inlineHelpText>Field enriched by Zoominfo</inlineHelpText>
    <label>Zoominfo Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>