unpackaged/main/default/objects/Account/validationRules/BillingCountryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>BillingCountryRequired</fullName>
    <active>true</active>
    <description>The Billing country is required when creating Account records manually.</description>
    <errorConditionFormula>AND(
ISNEW(),
ISPICKVAL(Account_Stage__c,&quot;Prospect&quot;),
NOT($Permission.ByPass_Account_BillingCountryRequired),

OR(
RecordType.DeveloperName =&#39;Customer&#39;,
RecordType.DeveloperName =&#39;Partner&#39;
),
ISBLANK(BillingCountry)
 
)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>The Billing Country is required before creating the record</errorMessage>
</ValidationRule>