unpackaged/main/default/objects/Account/listViews/Accounts_Pending_Hierarchy_Review.listView-meta.xml
<ListView>
    <fullName>Accounts_Pending_Hierarchy_Review</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Pending_Hierarchy_Review__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pending_Hierarchy_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts Pending Hierarchy Review</label>
</ListView>