unpackaged/main/default/objects/Account/listViews/Americas_NL_Enterprise_B2B_TAL_Tiers_1_2.listView-meta.xml
<ListView>
    <fullName>Americas_NL_Enterprise_B2B_TAL_Tiers_1_2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Americas NL Enterprise B2B TAL Tiers 1-2</label>
</ListView>