unpackaged/main/default/objects/Account/listViews/Customer_Accounts_ALL.listView-meta.xml
<ListView>
    <fullName>Customer_Accounts_ALL</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <filters>
        <field>Account_Stage__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Customer Accounts ALL</label>
    <sharedTo>
        <group>All_Brightcove_Active_user</group>
    </sharedTo>
</ListView>