unpackaged/main/default/objects/Account/listViews/DRIFT_2X_UniversityAccount_Ame_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>DRIFT_2X_UniversityAccount_Ame_DONOTEDIT</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Named_Account__c</columns>
    <columns>Named_Account_Tier__c</columns>
    <columns>Master_Record__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Secondary_Industry__c</columns>
    <columns>Stage__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.URL</field>
        <operation>contains</operation>
        <value>edu</value>
    </filters>
    <filters>
        <field>Sales_Division__c</field>
        <operation>equals</operation>
        <value>Americas</value>
    </filters>
    <label>DRIFT-2X-UniversityAccount-Ame-DONOTEDIT</label>
</ListView>