unpackaged/main/default/objects/Account/listViews/DRIFT_All_account_owned_by_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>DRIFT_All_account_owned_by_DONOTEDIT</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>ACCOUNT.IS_PARNTER</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>DRIFT - All account owned by - DONOTEDIT</label>
</ListView>