unpackaged/main/default/objects/Account/listViews/DRIFT_All_SA_Accounts_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>DRIFT_All_SA_Accounts_DONOTEDIT</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>DRIFT - All SA Accounts - DONOTEDIT</label>
</ListView>