unpackaged/main/default/objects/Account/listViews/DRIFT_Central_Prospects_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>DRIFT_Central_Prospects_DONOTEDIT</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Kirsten</value>
    </filters>
    <filters>
        <field>Account_Business_Unit__c</field>
        <operation>equals</operation>
        <value>Enterprise</value>
    </filters>
    <label>DRIFT - Central Prospects - DONOTEDIT</label>
</ListView>