unpackaged/main/default/objects/Account/listViews/Drift_Current_Customers.listView-meta.xml
<ListView>
    <fullName>Drift_Current_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Stage__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Drift - Current Customers</label>
</ListView>