unpackaged/main/default/objects/Account/listViews/DRIFT_CVR_s_current_accounts_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>DRIFT_CVR_s_current_accounts_DONOTEDIT</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>DRIFT- CVR&#39;s current accounts -DONOTEDIT</label>
</ListView>