unpackaged/main/default/objects/Account/listViews/DRIFT_EMEA_Marketing_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>DRIFT_EMEA_Marketing_DONOTEDIT</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Division__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <filters>
        <field>Account_Business_Unit__c</field>
        <operation>equals</operation>
        <value>Enterprise</value>
    </filters>
    <label>DRIFT - EMEA Marketing - DONOTEDIT</label>
</ListView>