unpackaged/main/default/objects/Account/listViews/DRIFT_Enterprise_2023_Tier_1_4_DONOTEDIT.listView-meta.xml
<ListView>
    <fullName>DRIFT_Enterprise_2023_Tier_1_4_DONOTEDIT</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Business_Unit__c</field>
        <operation>equals</operation>
        <value>Enterprise</value>
    </filters>
    <filters>
        <field>Tier__c</field>
        <operation>lessOrEqual</operation>
    </filters>
    <label>DRIFT-Enterprise_2023 Tier 1-4-DONOTEDIT</label>
</ListView>